<resources>
    <string name="app_name">MEILAN</string>
    <string name="facebook_app_id">2455828518037558</string>
    <string name="fb_login_protocol_scheme">fb2455828518037558</string>
    <string name="server_web_client_id">207201684468-i5f7q300ohgsdssqn2ac0cf9v1kup71s.apps.googleusercontent.com</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibWVpbGFuIiwiYSI6ImNrbmhjb3I4cjJ4MjEyb21xbWlrcnN5MjMifQ.1opqt3uk8SiJlzmDOPmdNg</string>
    <string name="device_m1">FINDER</string>
    <string name="device_m2">OVAL</string>
    <string name="device_m4">BLADE</string>
    <string name="enter_email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="mailbox">Email</string>
    <string name="enter_password">Password</string>
    <string name="new_registration">Sign up</string>
    <string name="forget_password">Forgot password?</string>
    <string name="registered">Register</string>
    <string name="enter_code">Enter verification code</string>
    <string name="login">Log In</string>
    <string name="enter_new_password">New password</string>
    <string name="change_account">Account already exists.</string>
    <string name="account_err">Incorrect Email</string>
    <string name="login_failed">Login Failed.</string>
    <string name="confirm">Confirm</string>
    <string name="CODE_20513">Incorrect Password</string>
    <string name="CODE_20508">Incorrect verification code</string>
    <string name="agree_agreement">By continuing, you agree to accept our</string>
    <string name="user_agreement">Terms of Use</string>
    <string name="user_privacy">Privacy Policy</string>
    <string name="other_methods">Log in with</string>
    <string name="get_now">Get</string>
    <string name="CODE_120004">Please try again after 1 minute.</string>
    <string name="have_account">Account already exists</string>
    <string name="prompt">Tips</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="birthday">Birthday</string>
    <string name="take_pictures">Take Photo</string>
    <string name="nickname">Username</string>
    <string name="logout_confirm">Are you sure to log out?</string>
    <string name="my_favorites">Favorites</string>
    <string name="account_security">Security &amp; Privacy</string>
    <string name="help_center">Help Center</string>
    <string name="about_us">About Us</string>
    <string name="personal_information">Personal Information</string>
    <string name="clear_cache">Clear cache</string>
    <string name="photo_album">Choose from Album</string>
    <string name="event_name">Rename your activity</string>
    <string name="change_password">Change password</string>
    <string name="account_cancel">Delete my account</string>
    <string name="agree_cancel">Delete my account</string>
    <string name="sure_log_off">Keep in mind that you will not be able to reactive your account or retrieve of the content or information you have added.</string>
    <string name="password_length">Password must be 6 to 24 characters.</string>
    <string name="no_internet_connection">No Internet</string>
    <string name="drop_out">Exit</string>
    <string name="uploaded_successfully">Upload Successful</string>
    <string name="upload">Upload</string>
    <string name="threshold_power">Power Threshold</string>
    <string name="common_problem">FAQ</string>
    <string name="submit">Submit</string>
    <string name="feedback">Feedback</string>
    <string name="favorite_fail">Saving failed</string>
    <string name="un_feedback_fail">Failed to delete</string>
    <string name="favorite_success">Added to Favorites</string>
    <string name="un_feedback_success">Deleted from Favorites</string>
    <string name="un_favorite">Undo</string>
    <string name="outdoor">Outdoor Cycling</string>
    <string name="indoor">Indoor Cycling</string>
    <string name="heart_rate_zone">Heart Rate Zone</string>
    <string name="power_range">Power Zone</string>
    <string name="save_QR_code">Long press to save the QR code.</string>
    <string name="is_latest">Latest Version</string>
    <string name="enter_questions">Help &amp; Support</string>
    <string name="feedback_type">Select a Topic</string>
    <string name="calculation">Calculate:</string>
    <string name="heart_reserve">HHR</string>
    <string name="select_correct_file">Please select a valid fit file.</string>
    <string name="area">Location</string>
    <string name="avatar">Profile photo</string>
    <string name="change_username">Edit Username</string>
    <string name="my_device">Device</string>
    <string name="no_favorites">No favorites</string>
    <string name="no_competition">No activities</string>
    <string name="select_file">Select file</string>
    <string name="support_fit">FIT file Only</string>
    <string name="contact_email">(Request Feedback)</string>
    <string name="feedback_item1">Technical Support</string>
    <string name="feedback_item2">Product Support</string>
    <string name="feedback_item3">Sales and Marketing</string>
    <string name="feedback_item4">Others</string>
    <string name="activity_sharing">Share</string>
    <string name="exercise_goal">Set Goal</string>
    <string name="reminder_interval">Reminder Frequency</string>
    <string name="version_">Version:</string>
    <string name="version">Version:V</string>
    <string name="agreement">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version_updating">Version</string>
    <string name="software_update">Software update</string>
    <string name="update_now">Install now</string>
    <string name="CODE_205302">Those passwords didn\'t match.</string>
    <string name="home_item2">Workout</string>
    <string name="data_uploading">Uploading...</string>
    <string name="perfect_information">Update personal details</string>
    <string name="enter_nickname">Name</string>
    <string name="later">Later</string>
    <string name="website_zh">Website</string>
    <string name="verification_code">Verification code</string>
    <string name="binding_email">Binding Email</string>
    <string name="cancel_binding">Cancel Binding</string>
    <string name="next_step">Next</string>
    <string name="init_gender">Gender</string>
    <string name="init_unit">Measurement</string>
    <string name="init_weight">Weight</string>
    <string name="CODE_120002">Incorrect Email</string>
    <string name="init_birthday">Birthday</string>
    <string name="password_reset_complete">Password changed</string>
    <string name="CODE_120003">This email already exists.</string>
    <string name="CODE_20201">Login timed out. Please log in again.</string>
    <string name="CODE_20200">Your account has been logged in elsewhere.</string>
    <string name="low_batter_tips">20% of battery remaining, please charge bike computer.</string>
    <string name="edit_name">Rename</string>
    <string name="enter_name">Name</string>
    <string name="low_batter_phone_tips">20% of battery remaining, please charge your phone.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Confirm</string>
    <string name="distance">Distance</string>
    <string name="altitude">Altitude</string>
    <string name="delete">Delete</string>
    <string name="set_up">Settings</string>
    <string name="home_item1">Home</string>
    <string name="home_item4">More</string>
    <string name="record">History</string>
    <string name="select_year">Year</string>
    <string name="January">Jan</string>
    <string name="February">Feb</string>
    <string name="March">Mar</string>
    <string name="April">Apr</string>
    <string name="May">May</string>
    <string name="June">Jun</string>
    <string name="July">Jul</string>
    <string name="August">Aug</string>
    <string name="September">Sep</string>
    <string name="October">Oct</string>
    <string name="November">Nov</string>
    <string name="December">Dec</string>
    <string name="details">Details</string>
    <string name="time">Time</string>
    <string name="total_time">HH:mm</string>
    <string name="total_times">Active Time</string>
    <string name="event_time">Active Time</string>
    <string name="total_time_details">Elapsed Time</string>
    <string name="calories">Calories</string>
    <string name="maximum_power">MAX Power</string>
    <string name="maximum_heart_rate">MAX HR</string>
    <string name="heart_max">MAX HR:</string>
    <string name="highest_altitude">MAX elevation</string>
    <string name="lowest_altitude">MIN elevation</string>
    <string name="rise">Ascent</string>
    <string name="decline">Descent</string>
    <string name="temperature">Temperature</string>
    <string name="average_temperature">AVG temperature</string>
    <string name="maximum_temperature">MAX temperature</string>
    <string name="average_speed">AVG Speed</string>
    <string name="maximum_speed">MAX Speed</string>
    <string name="average">AVG:</string>
    <string name="warning_max">MAX</string>
    <string name="maximum">MAX:</string>
    <string name="warning_min">MIN</string>
    <string name="minimum">MIN:</string>
    <string name="uphill">Uphill</string>
    <string name="downhill">Downhill</string>
    <string name="level">Flat</string>
    <string name="climbing">Climbing analysis</string>
    <string name="times">Times</string>
    <string name="view_selection">Select map</string>
    <string name="map_item1">Standard</string>
    <string name="map_item2">Satellite</string>
    <string name="map_item3">Hybrid</string>
    <string name="consume">Calories</string>
    <string name="total_consume">Kcal</string>
    <string name="personal_best">Best performance</string>
    <string name="farthest_distance">Longest Distance</string>
    <string name="longest_time">Longest Time(HH:mm)</string>
    <string name="no_record">No records</string>
    <string name="goal_setting">Set Goal</string>
    <string name="edit_record">Edit activity</string>
    <string name="favorites">Add to Favorites</string>
    <string name="edit">Edit</string>
    <string name="motion_track">Route</string>
    <string name="personality_sharing">Share</string>
    <string name="seven_empty">We haven\'t seen you in a while, let\'s go biking!</string>
    <string name="save_success">Saved</string>
    <string name="calendar">Calendar</string>
    <string name="time_sport">Active Time</string>
    <string name="competition">Competition</string>
    <string name="no_data">No records</string>
    <string name="add_activity">Add Activity</string>
    <string name="komoot_not">No route found in Indoor Cycling. Can\'t sync to Komoot.</string>
    <string name="seven_exercise">7 Days\' Workout</string>
    <string name="zone_1">Zone 1</string>
    <string name="zone_2">Zone 2</string>
    <string name="zone_3">Zone 3</string>
    <string name="zone_4">Zone 4</string>
    <string name="zone_5">Zone 5</string>
    <string name="zone_6">Zone 6</string>
    <string name="zone_7">Zone 7</string>
    <string name="heart_rate_zone_1_value">Warm up</string>
    <string name="heart_rate_zone_2_value">Fat Burn</string>
    <string name="heart_rate_zone_3_value">Cardio</string>
    <string name="average_cadence">AVG Cadence</string>
    <string name="maximum_cadence">MAX Cadence</string>
    <string name="average_heart_rate">AVG HR</string>
    <string name="lap">Lap</string>
    <string name="edit_length">/500</string>
    <string name="contact_details">Contact Email</string>
    <string name="average_power">AVG Power</string>
    <string name="input_contact_way">Please input your contact information.</string>
</resources>